<resources>
    <string name="app_name">ConectarSalud</string>

    <!-- PLEASE KEEP THIS App ID IN SAFE PLACE -->
    <!-- Get your own App ID at https://dashboard.agora.io/ -->
    <!-- After you entered the App ID, remove <##> outside of Your App ID -->
    <string name="agora_app_id">77ac163802624d58b070a520b729ece7</string>
    <!-- Obtain a temp Access Token at https://dashboard.agora.io -->
    <!-- You will need to deploy your own token server for production release -->
    <!-- Leave this value empty if Security keys/Token is not enabled for your project -->
    <string name="agora_access_token"></string>
    <string name="startCallMedic">Solicitar Consulta</string>
    <string name="startCallAffiliate">Solicitar Consulta</string>
    <string name="startCallGeneric">Iniciar</string>
    <string name="reasonAsk">Indique los motivos de su consulta</string>
    <string name="symptomsAsk">¿Cuáles son sus sintomas?</string>
    <!-- Strings related to login -->
    <string name="prompt_email">DNI</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="cancel_video_chat">Cancelar</string>
    <string name="action_sign_in_short">Ingresá</string>
    <string name="invalid_username">El DNI solamente puede contener números</string>
    <string name="invalid_password">La contraseña ingresada es invalida</string>
    <string name="login_failed">Usuario o contraseña incorrecta</string>
    <string name="unknown_login_error">Error al iniciar sesión</string>
    <string name="load_rating">Enviar</string>
    <string name="videochat_error">Error al iniciar la videollamada</string>
    <string name="remaining_time">Tiempo de espera aproximado: %s minutos</string>
    <string name="waiting_for_doctor">Esperando que el médico inicie la video llamada</string>
    <string name="ratingComment">Comentarios</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">Consulta Médica</string>
    <string name="consultationDateTitle">Fecha:</string>
    <string name="consultationAffiliateTitle">Paciente:</string>
    <string name="consultationTitle">Información de la Consulta</string>
    <string name="consultationDoctorTitle">Doctor:</string>
    <string name="consultationSpecialitiesTitle">Especialidades:</string>
    <string name="consultationSymptomsTitle">Síntomas:</string>
    <string name="consultationIndicationsTitle">Indicaciones:</string>
    <string name="load_prescription">Ver Receta</string>
    <string name="prescriptionTitle">Receta Digital</string>
    <string name="prescriptionDoctorTitle">Atendido por:</string>
    <string name="prescriptionDoctorNameTitle">Nombre y Apellido:</string>
    <string name="prescriptionDoctorLicenceTitle">M.N.:</string>
    <string name="prescriptionDoctorSpecialitiesTitle">Especialidades:</string>
    <string name="prescriptionDateTitle">Fecha:</string>
    <string name="prescriptionPatientTitle">Paciente:</string>
    <string name="prescriptionPatientNameTitle">Nombre y Apellido:</string>
    <string name="prescriptionPatientPlanTitle">Plan:</string>
    <string name="prescriptionPatientNumberTitle">Afiliado N°:</string>
    <string name="prescriptionEndTitle">RECETA GENERADA POR CONECTAR SALUD</string>
    <!-- Menu -->
    <string name="menu_home">Nueva Consulta</string>
    <string name="menu_history">Historial Consultas</string>
    <string name="family_group">Seleccione al afiliado que realizará la consulta</string>
    <string name="see">Ver</string>
    <string name="historial_de_consultas">Historial de Consultas</string>
</resources>
