<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/prescriptionTitle"
        android:textStyle="bold"
        android:text="@string/prescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loadPrescription"
        android:layout_width="50dp"
        style="@style/DefaultButton"
        android:drawableLeft="@android:drawable/ic_menu_share"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@android:drawable/ic_menu_share" />

    <ImageView
        android:id="@+id/brandImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="300dp"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionTitle"
        app:srcCompat="@drawable/brand" />

    <TextView
        android:id="@+id/prescriptionDateTitle"
        android:text="@string/prescriptionDateTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandImage"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/prescriptionDateContent"
        android:maxWidth="300dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionDateTitle"
        app:layout_constraintTop_toBottomOf="@+id/brandImage"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/prescriptionDoctorTitle"
        android:text="@string/prescriptionDoctorTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDateContent"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/prescriptionDoctorNameTitle"
        android:text="@string/prescriptionDoctorNameTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDoctorTitle"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/prescriptionDoctorNameContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:lineSpacingExtra="5dp"
        android:maxWidth="180dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionDoctorNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDoctorTitle" />

    <TextView
        android:id="@+id/prescriptionDoctorLicenceTitle"
        android:text="@string/prescriptionDoctorLicenceTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDoctorNameContent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/prescriptionDoctorLicenceContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:lineSpacingExtra="5dp"
        android:maxWidth="220dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionDoctorLicenceTitle"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDoctorNameContent" />

    <TextView
        android:id="@+id/prescriptionDoctorSpecialitiesTitle"
        android:text="@string/prescriptionDoctorSpecialitiesTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDoctorLicenceContent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/prescriptionSpecialitiesContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:lineSpacingExtra="5dp"
        android:maxWidth="210dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionDoctorSpecialitiesTitle"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionDoctorLicenceContent" />

    <TextView
        android:id="@+id/prescriptionPatientTitle"
        android:text="@string/prescriptionPatientTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionSpecialitiesContent"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/prescriptionPatientNameTitle"
        android:text="@string/prescriptionPatientNameTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientTitle"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/prescriptionPatientNameContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:lineSpacingExtra="5dp"
        android:maxWidth="180dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionPatientNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientTitle" />

    <TextView
        android:id="@+id/prescriptionPatientPlanTitle"
        android:text="@string/prescriptionPatientPlanTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientNameContent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/prescriptionPatientPlanContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:lineSpacingExtra="5dp"
        android:maxWidth="200dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionPatientPlanTitle"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientNameContent" />

    <TextView
        android:id="@+id/prescriptionPatientNumberTitle"
        android:text="@string/prescriptionPatientNumberTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:lineSpacingExtra="5dp"
        
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientPlanContent"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/prescriptionPatientNumberContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:lineSpacingExtra="5dp"
        android:maxWidth="200dp"
        
        app:layout_constraintStart_toEndOf="@+id/prescriptionPatientNumberTitle"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientPlanContent" />

    <TextView
        android:id="@+id/consultationIndicationsContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"
        android:gravity="start"
        android:padding="10dp"
        
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescriptionPatientNumberContent" />

    <TextView
        android:id="@+id/prescriptionEndTitle"
        android:textColor="#4fa5d5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:text="@string/prescriptionEndTitle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consultationIndicationsContent" />

    <ProgressBar
        style="@style/DefaultLoadingBar"
        android:id="@+id/loaderPrescription"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/prescriptionEndTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandImage"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>