<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/symptomsAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/symptomsAsk"
            android:textSize="16sp"
            android:layout_gravity="center" />

        <ExpandableListView
            android:id="@+id/symptomsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
            android:layout_marginTop="10dp"
            android:childDivider="#00000000">
        </ExpandableListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/symptomsA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/reasonAsk"
            android:textSize="16sp"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/editTextTextConsultationReason"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:background="@drawable/edit_text_border"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnGoWaitingRoom"
        android:text="@string/startCallGeneric"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:background="@color/secondaryGreen"
        android:textColor="@color/black"
        />

</LinearLayout>